--- a/public/css/style.css
+++ b/public/css/style.css
@@ -27,3 +27,31 @@
     display: flex;
     justify-content: space-evenly;
 }
+.title{
+    font-size: 45px;
+    padding-left: 30%;
+}
+.text-center{
+    font-size: 20px;
+}
+.menu-button{
+    text-decoration: none;
+    color: white!important;
+    text-align: center;
+    box-shadow: 0 4px 3px 1px rgba(63, 60, 121, 0.46);
+    border-radius: 10px;
+    background-color: #3b88fd;
+    box-sizing: border-box;
+    border: 1px;
+}
+.menu-button:hover{
+    text-decoration: none;
+    color: white;
+    background-color: #195cc1;
+}
+input {
+    border-radius: 10px!important;
+}
+.error{
+    border-color: red;
+}
