--- a/public/css/style.css
+++ b/public/css/style.css
@@ -114,3 +114,17 @@ input {
 .closing-div {
     padding: 100px 270px 252px 461px;
 }
+
+.terminal-block {
+    font-size: 20px;
+    position: relative
+}
+
+.terminal {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    margin-right: -50%;
+    transform: translate(-25%, 15%);
+    width: 100%;
+}
